--- a/index.html
+++ b/index.html
@@ -2,9 +2,97 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="src/assets/react.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>edwvu</title>
+
+		<!-- Primary Meta Tags -->
+		<title>Duy Nguyen - Software Developer Portfolio</title>
+		<meta name="title" content="Duy Nguyen - Software Developer Portfolio" />
+		<meta
+			name="description"
+			content="Dedicated Software Developer at a multi-national corp pursuing a career as a Developer. Specializing in React, TypeScript, Java, and full-stack development."
+		/>
+		<meta
+			name="keywords"
+			content="Duy Nguyen, Software Developer, React, TypeScript, Java, Full-stack Developer, Portfolio, Web Development, Programming"
+		/>
+		<meta name="author" content="Duy Nguyen" />
+		<meta name="robots" content="index, follow" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://vduydev.vercel.com/" />
+		<meta
+			property="og:title"
+			content="Duy Nguyen - Software Developer Portfolio"
+		/>
+		<meta
+			property="og:description"
+			content="Dedicated Software Developer at a multi-national corp pursuing a career as a Developer. Specializing in React, TypeScript, Java, and full-stack development."
+		/>
+		<meta
+			property="og:image"
+			content="https://vduydev.vercel.com/og-image.jpg"
+		/>
+		<meta property="og:site_name" content="Duy Nguyen Portfolio" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://vduydev.vercel.com/" />
+		<meta
+			property="twitter:title"
+			content="Duy Nguyen - Software Developer Portfolio"
+		/>
+		<meta
+			property="twitter:description"
+			content="Dedicated Software Developer at a multi-national corp pursuing a career as a Developer. Specializing in React, TypeScript, Java, and full-stack development."
+		/>
+		<meta
+			property="twitter:image"
+			content="https://vduydev.vercel.com/og-image.jpg"
+		/>
+
+		<!-- Favicon -->
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+
+		<!-- Canonical URL -->
+		<link rel="canonical" href="https://vduydev.vercel.com/" />
+
+		<!-- JSON-LD Structured Data -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Person",
+				"name": "Duy Nguyen",
+				"jobTitle": "Software Developer",
+				"description": "Dedicated Software Developer at a multi-national corp pursuing a career as a Developer.",
+				"url": "https://vduydev.vercel.com",
+				"sameAs": [
+					"https://github.com/DuyTek",
+					"https://linkedin.com/in/ndvduy"
+				],
+				"worksFor": {
+					"@type": "Organization",
+					"name": "Katalon"
+				},
+				"knowsAbout": [
+					"React",
+					"TypeScript",
+					"Java",
+					"JavaScript",
+					"Full-stack Development",
+					"Web Development",
+					"Software Engineering"
+				]
+			}
+		</script>
+
+		<!-- Preconnect to external domains -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	</head>
 	<body>
 		<div id="root"></div>
